--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,6 +4,8 @@
         <ul>
             <li><a href="/subjects">Subjects</a></li>
             <li><a href="/subjects/new">Add Subject</a></li>
+            <li><a href="/papers">Papers</a></li>
+            <li><a href="/papers/new">Add Paper</a></li>
         </ul>
     </nav>
 </header>
