Added file pond

--- a/views/papers/new.ejs
+++ b/views/papers/new.ejs
@@ -1,5 +1,5 @@
 <h2>New Paper</h2>
-<form action="/papers" method="POST" enctype="multipart/form-data">
+<form action="/papers" method="POST">
     <%- include('_form_fields') %>
     <a href="/papers">Go Back</a>
     <button type="submit">Create</button>
