--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,6 +1,6 @@
 <h2>Recent Papers</h2>
 <div>
     <% papers.forEach(paper => { %>
-        <img height="150" width="100" src="<%= paper.coverImagePath %">
+        <img height="150" width="100" src="<%= paper.coverImagePath %>">
         <% })%>
 </div>
